[gd_scene load_steps=15 format=2]

[ext_resource path="res://gui/screens/no_game/scripts/NoGame.gd" type="Script" id=1]
[ext_resource path="res://gui/screens/keep_game/assets/GUI2.png" type="Texture" id=2]
[ext_resource path="res://gui/screens/exit_dialog/assets/GUI.png" type="Texture" id=3]
[ext_resource path="res://gui/screens/exit_dialog/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( -0.331665, 96.2234, 47.776, 30.4572 )
margin_left = 0.482585

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 145, 81, 46, 14 )

[node name="NoGamePopUp" type="Node2D"]
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -298.0
margin_right = 238.0
margin_bottom = 254.0
rect_min_size = Vector2( 456, 552 )
rect_clip_content = true
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
margin_left = 0.482585
margin_right = 456.0
margin_bottom = 552.0
alignment = 1

[node name="titleLbl" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 202.0
margin_right = 455.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 2 )
text = "No game was found. 
Create new game?"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 265.0
margin_right = 455.0
margin_bottom = 305.0
alignment = 1

[node name="YesButton" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
modulate = Color( 0.690196, 0.992157, 0.541176, 1 )
margin_left = 147.0
margin_right = 307.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
shortcut_in_tooltip = false
text = "Yes!"
icon_align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 309.0
margin_right = 455.0
margin_bottom = 349.0
alignment = 1

[node name="NoButton" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 0.372549, 0.372549, 1 )
margin_left = 148.0
margin_right = 306.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "   No, maybe later  "

[connection signal="pressed" from="PopupPanel/VBoxContainer/HBoxContainer2/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
